--- a/index.html
+++ b/index.html
@@ -5,56 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
       <!--Верхня лінія-->
       <nav>
-        <a href="/" lang="en">WebStudio</a>
+        <a class="nav-basa" href="./index.html" lang="en"> <span class="nav-accent">Web</span>Studio</a>
           <ul>
-            <li><a href="/">Студія</a></li>
-            <li><a href="/">Портфоліо</a></li>
-            <li><a href="/">Контакти</a></li>
+            <li><a class="nav-item" href="./index.html">Студія</a></li>
+            <li><a class="nav-item" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="nav-item" href="/">Контакти</a></li>
           </ul>
       </nav>
           <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="nav-item contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="nav-item contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
      </header>
     <main>
       <!--Шапка-->
       <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="button-activ">Замовити послугу</button>
         </section>
       <!--Особливості-->
       <section>
         <h2 hidden>Особливості</h2>
           <ul>
             <li>
-              <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p>
+              <h3 class="title-item">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиці
                 </p>
               </li>
               <li>
-                <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>
+                <h3 class="title-item">ПУНКТУАЛЬНІСТЬ</h3>
+                <p class="text">
                   Завдання організації, особливо рамки і місце навчання кадрів тягне
                   у себе.
                 </p>
               </li>
               <li>
-                <h3>ПЛАНУВАННЯ</h3>
-                <p>
+                <h3 class="title-item">ПЛАНУВАННЯ</h3>
+                <p class="text">
                   Так само консультація з широким активом значною мірою зумовлює.
                 </p>
               </li>
               <li>
-                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>
+                <h3 class="title-item">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p class="text">
                   Значимість цих проблем настільки очевидна, що реалізація планових
                   завдань.
                 </p>
@@ -63,11 +67,11 @@
         </section>
         <!--Чим займаються-->
         <section>
-          <h2>Чим займаються</h2>
+          <h2 class="title">Чим займаються</h2>
           <ul>
             <li>
               <img
-                src="./img/box-1.png"
+                src="./images/work/box-1.png"
                 alt="Розробка сайту під вашу бізнес модель під ключ"
                 width="370"
                 height="294"
@@ -75,7 +79,7 @@
             </li>
             <li>
               <img
-                src="./img/box-2.png"
+                src="./images/work/box-2.png"
                 alt="Розробка веб додатків"
                 width="370"
                 height="294"
@@ -83,7 +87,7 @@
             </li>
             <li>
               <img
-                src="./img/box-3.png"
+                src="./images/work/box-3.png"
                 alt="Розробка веб дизайну"
                 width="370"
                 height="294"
@@ -93,42 +97,42 @@
         </section>
         <!--Команда-->
         <section>
-          <h2>Наша команда</h2>
+          <h2 class="title">Наша команда</h2>
             <ul>
               <li>
-                <img src="./team/team-img-1.jpg" alt="Людина, яка займається дизайном в компанії" width="270"
+                <img src="./images/team/team-img-1.jpg" alt="Людина, яка займається дизайном в компанії" width="270"
                 height="260"/>
-                <h3>Ігор Дем'яненко</h3>
-                <p lang="en">Product Designer</p>
+                <h3 class="title-team">Ігор Дем'яненко</h3>
+                <p lang="en" class="text-work" >Product Designer</p>
               </li>
               <li>
-                <img src="./team/team-img-2.jpg" alt="Людина, яка займається фронтент розробкою" width="270"
+                <img src="./images/team/team-img-2.jpg" alt="Людина, яка займається фронтент розробкою" width="270"
                 height="260"/>
-                <h3>Ольга Рєпіна</h3>
-                <p lang="en">Frontend Developer</p>
+                <h3 class="title-team">Ольга Рєпіна</h3>
+                <p lang="en" class="text-work">Frontend Developer</p>
               </li>
               <li>
-                <img src="./team/team-img-3.jpg" alt="Людина, яка займається маркетингом" width="270"
+                <img src="./images/team/team-img-3.jpg" alt="Людина, яка займається маркетингом" width="270"
                 height="260"/>
-                <h3>Микола Тарасова</h3>
-                <p lang="en">Marketing</p>
+                <h3 class="title-team">Микола Тарасова</h3>
+                <p lang="en" class="text-work">Marketing</p>
               </li>
               <li>
-                <img src="./team/team-img-4.jpg" alt="Людина, яка займається розробкою дизайну" width="270"
+                <img src="./images/team/team-img-4.jpg" alt="Людина, яка займається розробкою дизайну" width="270"
                 height="260"/>
-                <h3>Михайло Єрмаков</h3>
-                <p lang="en">UI Designer</p>
+                <h3 class="title-team">Михайло Єрмаков</h3>
+                <p lang="en" class="text-work">UI Designer</p>
               </li>
             </ul>
         </section>
     </main>
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="/" class="nav-logo"><span class="nav-accent">Web</span>Studio</a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <p class="address">м. Київ, пр-т Лесі Українки, 26</p>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="nav-white" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="nav-white" href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
       </address>
     </footer>
